--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,43 @@ div.error{
 	background-color: white;
 	border-radius: 5px;
 }
+
+.cuadrito1{
+	padding-top: 200px;
+	background-color: rgba(255,255,255,0.3);
+	width: 45% !important;
+	height: 330px;
+	margin: 10px 10px 10px 10px;
+	margin-left: 25px;
+	margin-top: 200px;
+	border-radius: 5%;
+}
+
+.cuadrito2{
+	padding-top: 200px;
+	background-color: rgba(255,255,255,0.3);
+	width: 48% !important;
+	height: 330px;
+	margin: 10px 10px 10px 10px;
+	margin-top: 200px;
+	border-radius: 5%;
+}
+
+.titulod1{
+	margin-top: 130px;
+	margin-left: 50px;
+}
+
+.titulod2{
+	margin-left: 100px;
+}
+
+.titulod3{
+	margin-left: 20px;
+	margin-top: 150px;
+}
+
+.t1{
+	font-size: 1.5em;
+	color: black;
+}
