--- a/css/style.css
+++ b/css/style.css
@@ -75,11 +75,14 @@ div.error{
 	margin-left: 65px;
 	margin-left: 60px;
 }
-<<<<<<< HEAD
 
-=======
->>>>>>> c1351a0649b2997907d78033dcdca1fdf9ea8b51
 .BotonVerRestaurantes{
 	margin-top: 30px;
 	margin-left: 100px;
+}
+
+.mini{
+	height: 40px;
+	width: 40px;
+	margin-top: 10px;
 }
