--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ div.error{
 	padding: 0 20px 1px 20px;
 	background-color: white;
 	border-radius: 5px;
+	margin-top: 10px;
 }
 .cuadrito1{
 	padding-top: 200px;
